Closed Bug 1436663 Opened 5 years ago Closed 5 years ago

Hits warning assertion The offset is out of bounds: '!mParent || mOffset.value() <= mParent->Length()' EditorDOMPoint.h, line 373 in EditorBase::JoinNodeDeep()

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox-esr52 --- unaffected
firefox58 --- wontfix
firefox59 --- wontfix
firefox60 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: regression)

Attachments

(1 file)

>  0:42.83 pid:78184 [Child 137044, Main Thread] ###!!! ASSERTION: The offset is out of bounds: '!mParent || mOffset.value() <= mParent->Length()', file c:\mozilla\fx64-dbg\dist\include\mozilla/EditorDOMPoint.h, line 373
>  0:42.83 pid:78184 #01: mozilla::EditorBase::JoinNodeDeep (c:\mozilla\src\editor\libeditor\editorbase.cpp:4377)
>  0:42.84 pid:78184 #02: mozilla::HTMLEditRules::WillDeleteSelection (c:\mozilla\src\editor\libeditor\htmleditrules.cpp:2700)
>  0:42.84 pid:78184 #03: mozilla::HTMLEditRules::WillDoAction (c:\mozilla\src\editor\libeditor\htmleditrules.cpp:641)
>  0:42.84 pid:78184 #04: mozilla::TextEditor::DeleteSelection (c:\mozilla\src\editor\libeditor\texteditor.cpp:668)
>  0:42.84 pid:78184 #05: mozilla::DeleteCommand::DoCommand (c:\mozilla\src\editor\libeditor\editorcommands.cpp:791)
>  0:42.84 pid:78184 #06: nsControllerCommandTable::DoCommand (c:\mozilla\src\dom\commandhandler\nscontrollercommandtable.cpp:147)
>  0:42.84 pid:78184 #07: nsBaseCommandController::DoCommand (c:\mozilla\src\dom\commandhandler\nsbasecommandcontroller.cpp:136)
>  0:42.84 pid:78184 #08: nsCommandManager::DoCommand (c:\mozilla\src\dom\commandhandler\nscommandmanager.cpp:214)
>  0:42.84 pid:78184 #09: nsHTMLDocument::ExecCommand (c:\mozilla\src\dom\html\nshtmldocument.cpp:3091)
>  0:42.84 pid:78184 #10: mozilla::dom::HTMLDocumentBinding::execCommand (c:\mozilla\fx64-dbg\dom\bindings\htmldocumentbinding.cpp:776)
>  0:42.84 pid:78184 #11: mozilla::dom::GenericBindingMethod (c:\mozilla\src\dom\bindings\bindingutils.cpp:3035)
Comment on attachment 8949640 [details]
Bug 1436663 - EditorBase::JoinNodeDeep() should set result after actually joining the nodes

https://reviewboard.mozilla.org/r/218998/#review225038
Attachment #8949640 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/216fac39a9f4
EditorBase::JoinNodeDeep() should set result after actually joining the nodes r=m_kato
https://hg.mozilla.org/mozilla-central/rev/216fac39a9f4
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.